<resources>
    <string name="app_name">倒班本</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hint_username">手机号</string>
    <string name="hint_password">密码</string>
    <string name="text_cb_remember_pwd">记住密码?</string>
    <string name="text_btn_login">登录</string>
    <string name="text_btn_register">注册</string>
    <string name="text_tv_forget_pwd">重置密码</string>
    <string name="text_tv_custom_dialog_loading">正在登录</string>
    <string name="text_btn_reg">马上注册</string>
    <string name="hint_et_reg_phone">请输入手机号</string>
    <string name="hint_et_reg_vcode">请输入手机验证码</string>
    <string name="hint_et_reg_password">请设置密码</string>
    <string name="tv_reg_agreement">我已阅读并同意</string>
    <string name="tv_reg_user_agreement">《倒班本用户注册服务协议》</string>
    <string name="tv_reg_privacy_agreement">《倒班本用户隐私协议》</string>
    <string name="page_title_image">页面标题图片</string>
    <string name="text_btn_get_vcode">获取验证码</string>
    <string name="text_tv_phone_state_correct">正确的手机号码</string>
    <string name="text_tv_phone_state_incorrect">错误的手机号码</string>
    <string name="text_tv_reg_phone_state_space">"&#160;&#160;&#160;&#160;&#160;&#160;"</string>
    <string name="main_rb_text">首页</string>
    <string name="calendar_rb_text">日历</string>
    <string name="personal_rb_text">我的</string>
    <string name="tag_global">global</string>
    <string name="hint_et_workgroup_name">给班组起个名字</string>
    <string name="hint_tv_workgroup_base_date">请点击设置</string>
    <string name="text_tv_group_setting_number">班组总数</string>
    <string name="text_tv_work_day_kinds_setting_number">班次数量</string>
    <string name="hint_et_term_day_name">给班次起个名字</string>
    <string name="text_tv_term_days_setting_hour">每班几小时</string>
    <string name="text_btn_two_picker_ok">确定</string>
    <string name="text_work_time_start">上班时间</string>
    <string name="text_work_time_end">下班时间</string>
    <string name="text_btn_two_picker_cancel">取消</string>
    <string name="text_menu_setup">设置</string>
    <string name="text_menu_share">分享</string>
    <string name="text_tv_solution_edit_company">公司:</string>
    <string name="hint_et_solution_edit_company">请输入公司名称</string>
    <string name="text_menu_item_solutions_set_default">设为默认</string>
    <string name="text_menu_item_solutions_delete">删除</string>
    <string name="text_menu_item_solutions_edit">编辑</string>
    <string name="text_tv_solution_edit_flag">标签</string>
    <string name="hint_et_solution_edit_flag">请输入标签</string>
    <string name="text_cb_edit_default">默认</string>
    <string name="toast_work_day_setting_minimum">周期不得少于两天</string>
    <string name="toast_work_group_setting_minimum">班组不得少于一个</string>
    <string name="toast_work_day_kind_setting_minimum">班组不得少于一个</string>
    <string name="text_menu_item_add_new">新建</string>
    <string name="text_menu_item_add_download">下载</string>
    <string name="text_menu_item_solutions_upload">共享方案</string>
    <string name="text_menu_item_upload_cancel">取消共享</string>
    <string name="text_menu_item_upload_download">下载方案</string>
    <string name="text_personal_default_desc">这个人很懒，什么也没有留下！这个人很懒，什么也没有留下！这个人很懒，什么也没有留下！</string>
</resources>
