<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/page_title_image"
        android:src="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_reg_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/hint_et_reg_phone"
            android:inputType="phone" />

        <TextView
            android:id="@+id/tv_reg_phone_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            tools:text="手机号码无效" />
    </LinearLayout>
    <!--android:minWidth="90dp"-->
    <!--android:text="@string/text_tv_reg_phone_state_space"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_reg_vcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/hint_et_reg_vcode"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_reg_get_vcode"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_round_blank"
            android:minHeight="0dp"
            android:text="@string/text_btn_get_vcode" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_et_reg_password"
        android:inputType="textPassword" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/cb_reg_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="start"
            android:checked="true"
            android:text="@string/tv_reg_agreement"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_reg_user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/cb_reg_agreement"
            android:layout_toEndOf="@id/cb_reg_agreement"
            android:text="@string/tv_reg_user_agreement"
            android:textColor="@android:color/holo_blue_light" />

        <TextView
            android:id="@+id/tv_reg_privacy_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cb_reg_agreement"
            android:layout_centerHorizontal="true"
            android:text="@string/tv_reg_privacy_agreement"
            android:textColor="@android:color/holo_blue_light" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_reg_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button_round"
        android:text="@string/text_btn_reg" />
</LinearLayout>