<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:id="@+id/main_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/home_bottom_parent_bg"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/RadioButtonStyle"
            android:drawableTop="@drawable/selector_home_button"
            android:text="@string/main_rb_text" />


        <RadioButton
            android:id="@+id/rb_calendar"
            style="@style/RadioButtonStyle"
            android:drawableTop="@drawable/selector_calendar_button"

            android:text="@string/calendar_rb_text" />


        <RadioButton
            android:id="@+id/rb_personal"
            style="@style/RadioButtonStyle"
            android:drawableTop="@drawable/selector_personal_button"

            android:text="@string/personal_rb_text" />
    </RadioGroup>
</LinearLayout>